--- a/app/src/main/res/layout/upcoming_fragment.xml
+++ b/app/src/main/res/layout/upcoming_fragment.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".MoviesFragment"
+    android:background="#121212"
+    android:layout_centerHorizontal="true">
 
     <TextView
         android:id="@+id/tvUpcomingFragment"
@@ -18,4 +20,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Spinner
+        android:id="@+id/spUpcoming"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/tvUpcomingFragment"
+        android:background="@color/white"
+
+        android:contentDescription="@string/hello_blank_fragment" />
+
+    <ProgressBar
+        android:id="@+id/pbUpcomingProgressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:scaleY="4"
+        android:indeterminateBehavior="repeat"
+        android:indeterminate="true"
+        />
+
+</RelativeLayout>
