--- a/app/src/main/res/layout/upcoming_fragment.xml
+++ b/app/src/main/res/layout/upcoming_fragment.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/tvUpcomingFragment"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="Upcoming Movies"
@@ -26,6 +26,13 @@
         android:background="@color/white"
 
         android:contentDescription="@string/hello_blank_fragment" />
+
+    <ImageView
+        android:id="@+id/ivUpcomingPhoto"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/spUpcoming"/>
 
     <ProgressBar
         android:id="@+id/pbUpcomingProgressBar"
