--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -19,8 +19,9 @@
             <ImageView
                 android:id="@+id/ivMoviePhoto"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_centerHorizontal="true"/>
+                android:layout_height="280dp"
+                android:layout_centerHorizontal="true"
+                android:contentDescription="@string/movie_poster" />
 
             <TextView
                 android:id="@+id/tvMovieTitle"
@@ -29,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textSize="15sp"
-                android:text="Title: "
+                android:text="@string/title"
                 android:textColor="@color/white"
                 />
 
@@ -40,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textSize="15sp"
-                android:text="Overview: "
+                android:text="@string/overview"
                 android:textColor="@color/white"/>
 
             <TextView
@@ -50,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textSize="15sp"
-                android:text="Rating: "
+                android:text="@string/rating"
                 android:textColor="@color/white"/>
 
         </RelativeLayout>
